i added the html code on the register page, added a form tag for users to register. i also added a few words in the dashboard footer and added a comment in the index page

--- a/Views/Home/Dashboard.cshtml
+++ b/Views/Home/Dashboard.cshtml
@@ -17,7 +17,7 @@
         </div>
         <footer>
             <div class="foot_container">
-                &copy; 2025 - Contract Monthly Claim System CMCS
+                &copy; 2025 - Contract Monthly Claim System (CMCS) | designed for independent contractors' use
             </div>
         </footer>
     </body>
