--- a/Views/Home/Register.cshtml
+++ b/Views/Home/Register.cshtml
@@ -43,7 +43,7 @@
                             <option value="program manager">Program Manager (PM)</option>
                         </select>
                     </div>
-                    <a href="@Url.Action("Dashboard","Register")" class="btn">Register</a>
+                    <a href="@Url.Action("Dashboard","Home")" class="btn">Register</a>
                 </form>
             </div>
         </div>
