i fixed syntax of the pages/views in the links and i also create IActionResult methods for the veiws i create to link the pages

--- a/Views/Home/Dashboard.cshtml
+++ b/Views/Home/Dashboard.cshtml
@@ -15,9 +15,9 @@
                 <nav>
                     <ul>
                         <li><a href="@Url.Action("Dashboard","Home")">Home</a></li>
-                        <li><a href="@Url.Action("SubmitClaim","Home")">Submit a Claim</a></li>
+                        <li><a href="@Url.Action("SubmitAClaim","Home")">Submit a Claim</a></li>
                         <li><a href="@Url.Action("TrackClaim","Home")">Track Claim</a></li>
-                        <li><a href="@Url.Action("PreApproveClaim","Home")">Pre-Approve Claim</a></li>
+                        <li><a href="@Url.Action("PreapproveClaim","Home")">Pre-Approve Claim</a></li>
                         <li><a href="@Url.Action("ApproveClaim","Home")">Approve Claim</a></li>
                         <li><a href="@Url.Action("Profile","Home")">Profile</a></li>
                         <li><a href="@Url.Action("Index","Home")">Logout</a></li>
