--- a/Views/Home/Dashboard.cshtml
+++ b/Views/Home/Dashboard.cshtml
@@ -30,7 +30,7 @@
         </div>
         <footer>
             <div class="foot_container">
-                &copy; 2025 - Contract Monthly Claim System (CMCS) | designed for independent contractors' use
+                &copy; 2025 - Contract Monthly Claim System (CMCS) | Designed for independent contractors' use
             </div>
         </footer>
     </body>
