added the submit a claim html layout in the SubmitClaim page, and had minor changes in the TrackClaim page

--- a/Views/Home/SubmitAClaim.cshtml
+++ b/Views/Home/SubmitAClaim.cshtml
@@ -3,4 +3,36 @@
 *@
 @{
 }
-<h2> submit a claim page </h2>
+<!-- Submit a claim Page -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Submit a claim Page</title>
+</head>
+<body>
+    <header>
+        <div class="header-container">
+            <h1>CSCM</h1>
+            <nav>
+                <ul>
+                    <li><a href="@Url.Action("Dashboard","Home")">Home</a></li>
+                    <li><a href="@Url.Action("SubmitAClaim","Home")">Submit a Claim</a></li>
+                    <li><a href="@Url.Action("TrackClaim","Home")">Track Claim</a></li>
+                    <li><a href="@Url.Action("PreapproveClaim","Home")">Pre-Approve Claim</a></li>
+                    <li><a href="@Url.Action("ApproveClaim","Home")">Approve Claim</a></li>
+                    <li><a href="@Url.Action("Profile","Home")">Profile</a></li>
+                    <li><a href="@Url.Action("Index","Home")">Logout</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <div class="content">
+        <h1>submit a claim page</h1>
+    </div>
+    <footer>
+        <div class="foot_container">
+            &copy; 2025 - Contract Monthly Claim System (CMCS) | Designed for independent contractors' use
+        </div>
+    </footer>
+</body>
+</html>
