--- a/Views/Home/TrackClaim.cshtml
+++ b/Views/Home/TrackClaim.cshtml
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Dashboard Page</title>
+    <title>Track a claim Page</title>
 </head>
 <body>
     <header>
