--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,6 +7,7 @@
 <html lang="en">
     <head>
         <title>Login Page</title>
+        <link rel="stylesheet" href="~/css/site.css" />
     </head>
     <body>
         <div class="main-content">
@@ -26,6 +27,7 @@
                         <div class="form-group">
                             <label for="login-role">Role</label>
                             <select id="login-role">
+                                <option value="">Select your role</option>
                                 <option value="lecturer"> Lecturer </option>
                                 <option value="program coordinate"> Program Coordinator (PC) </option>
                                 <option value="program manager"> Program Manager (PM) </option>
