--- a/Views/Home/Register.cshtml
+++ b/Views/Home/Register.cshtml
@@ -7,6 +7,7 @@
 <html lang="en">
     <head>
         <title>Registration Page</title>
+        <link rel="stylesheet" href="~/css/site.css"/>
     </head>
     <body>
         <div class="main-content">
@@ -45,6 +46,9 @@
                     </div>
                     <a href="@Url.Action("Dashboard","Home")" class="btn">Register</a>
                 </form>
+			    <div class="toggle-form">
+                    <p>Already have an account? <a href="@Url.Action("Index","Home")">Login</a></p> 
+                </div>
             </div>
         </div>
     </body>
