--- a/Views/Home/SubmitAClaim.cshtml
+++ b/Views/Home/SubmitAClaim.cshtml
@@ -27,7 +27,39 @@
         </div>
     </header>
     <div class="content">
-        <h1>submit a claim page</h1>
+        <!-- Submit Claim Page -->
+        <div id="submit-claim" class="page">
+            <h2>Submit New Claim</h2>
+            <div class="form-container">
+                <form>
+                    <div class="form-group">
+                        <label for="faculty-name">Faculty Name</label>
+                        <input type="text" id="faculty-name">
+                    </div>
+                    <div class="form-group">
+                        <label for="module-name">Module Name</label>
+                        <input type="text" id="module-name">
+                    </div>
+                    <div class="form-group">
+                        <label for="hours-worked"> Number Of Hours Worked</label>
+                        <input type="number" id="hours-worked" >
+                    </div>
+                    <div class="form-group">
+                        <label for="rate">Rate: Amount Per Hour</label>
+                        <input type="number" id="rate" >
+                    </div>
+                    <div class="form-group">
+                        <label for="total-amount">Total Amount</label>
+                        <input type="number" id="total-amount">
+                    </div>
+                    <div class="form-group">
+                        <label for="upload-documents">Upload Supporting Document(s)</label>
+                        <input type="file" id="upload-documents">
+                    </div>
+                    <a href="@Url.Action("TrackClaim","Home")" class="btn">Submit Claim</a>
+                </form>
+            </div>
+        </div>
     </div>
     <footer>
         <div class="foot_container">
