--- a/Views/Home/TrackClaim.cshtml
+++ b/Views/Home/TrackClaim.cshtml
@@ -8,6 +8,7 @@
 <html lang="en">
 <head>
     <title>Track a claim Page</title>
+	<link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
     <header>
@@ -27,7 +28,93 @@
         </div>
     </header>
     <div class="content">
-        <h1>track claim</h1>
+        <div id="track-claims" class="page">
+            <h2>My Claims</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Claim ID</th>
+                        <th>Date Submitted</th>
+                        <th>Faculty Name</th>
+                        <th>Module Name</th>
+                        <th>Number Of Hours Worked</th>
+                        <th>Rate: Amount Per Hour</th>
+                        <th>Total Amount</th>
+                        <th>Supporting Documents</th>
+                        <th>Pre-Approve Date</th>
+                        <th>Approve Date</th>
+                        <th>Status</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="claim-id">CLAIM-001</td>
+                        <td>2023-09-10</td>
+                        <td>Faculty of Science</td>
+                        <td>Research Materials</td>
+                        <td>10</td>
+                        <td>R 350.00</td>
+                        <td>R 3,500.00</td>
+                        <td><a href="#" class="support-link">receipt_001.pdf</a></td>
+                        <td>2023-09-12</td>
+                        <td>2023-09-15</td>
+                        <td><span class="status status-pre-approved">Pre-Approved</span></td>
+                    </tr>
+                    <tr>
+                        <td class="claim-id">CLAIM-002</td>
+                        <td>2023-09-15</td>
+                        <td>Faculty of Business</td>
+                        <td>Conference Registration</td>
+                        <td>5</td>
+                        <td>R 500.00</td>
+                        <td>R 2,500.00</td>
+                        <td><a href="#" class="support-link">conference_invoice.pdf</a></td>
+                        <td>2023-09-17</td>
+                        <td>-</td>
+                        <td><span class="status status-rejected">Rejected</span></td>
+                    </tr>
+                    <tr>
+                        <td class="claim-id">CLAIM-003</td>
+                        <td>2023-09-20</td>
+                        <td>Faculty of Engineering</td>
+                        <td>Travel Expenses</td>
+                        <td>15</td>
+                        <td>R 400.00</td>
+                        <td>R 6,000.00</td>
+                        <td><a href="#" class="support-link">travel_receipts.zip</a></td>
+                        <td>2023-09-22</td>
+                        <td>2023-09-25</td>
+                        <td><span class="status status-approved">Approved</span></td>
+                    </tr>
+                    <tr>
+                        <td class="claim-id">CLAIM-004</td>
+                        <td>2023-10-05</td>
+                        <td>Faculty of Arts</td>
+                        <td>Workshop Materials</td>
+                        <td>15</td>
+                        <td>R 250.00</td>
+                        <td>R 3,750.00</td>
+                        <td><a href="#" class="support-link">workshop_receipt.pdf</a></td>
+                        <td>2023-10-08</td>
+                        <td>-</td>
+                        <td><span class="status status-pending">Pending</span></td>
+                    </tr>
+                    <tr>
+                        <td class="claim-id">CLAIM-005</td>
+                        <td>2023-10-12</td>
+                        <td>Faculty of Technology</td>
+                        <td>Academic Software License</td>
+                        <td>N/A</td>
+                        <td>N/A</td>
+                        <td>R 4,500.00</td>
+                        <td><a href="#" class="support-link">software_license.pdf</a></td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td><span class="status status-pending">Pending</span></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
     <footer>
         <div class="foot_container">
