--- a/Views/Home/ApproveClaim.cshtml
+++ b/Views/Home/ApproveClaim.cshtml
@@ -8,6 +8,7 @@
 <html lang="en">
 <head>
     <title>Approve Claim Page</title>
+    <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
     <header>
