--- a/Views/Home/Dashboard.cshtml
+++ b/Views/Home/Dashboard.cshtml
@@ -38,9 +38,22 @@
                 
 
                 <div class="dashboard-card">
-                    <h3>Quick Actions</h3>
-                    <p>Submit a new claim or track existing claims</p>
+                    <h3>Lecturer Quick Actions</h3>
+                    <p>Submit a new claim </p>
                     <a href="@Url.Action("SubmitAClaim","Home")" class="btn"> Submit New Claim</a>
+
+                </div>
+
+                <div class="dashboard-card">
+                    <h3>PC Quick Actions</h3>
+                    <p>Pre-approve claims </p>
+                    <a href="@Url.Action("PreapproveClaim","Home")" class="btn">Pre-Approve Claims</a>
+                </div>
+
+				<div class="dashboard-card">
+					<h3>PM Quick Actions</h3>
+					<p>Approve claims or track existing claims</p>
+					<a href="@Url.Action("ApproveClaim","Home")" class="btn">Approve Claims</a>
                 </div>
 
                 <div class="dashboard-card">
