added the style in an external .css file called site.css and the i linked all the pages to the external style file to the whole web application

--- a/Views/Home/ApproveClaim.cshtml
+++ b/Views/Home/ApproveClaim.cshtml
@@ -7,8 +7,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Approve Claim Page</title>
-    <link rel="stylesheet" href="~/css/site.css" />
+    <title>Approve Claim Page | CSCM</title>
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
 <body>
     <header>
