--- a/Views/Home/Dashboard.cshtml
+++ b/Views/Home/Dashboard.cshtml
@@ -6,8 +6,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Dashboard Page</title>
-        <link rel="stylesheet" href="~/css/site.css" />
+    <title>Dashboard Page | CSCM</title>
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     </head>
     <body>
         <header>
