--- a/Views/Home/Profile.cshtml
+++ b/Views/Home/Profile.cshtml
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Profile Page</title>
+    <title>Profile Page | CSCM</title>
 </head>
 <body>
     <header>
