--- a/Views/Home/PreapproveClaim.cshtml
+++ b/Views/Home/PreapproveClaim.cshtml
@@ -7,8 +7,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>PreApprove Page</title>
-    <link rel="stylesheet" href="~/css/site.css" />
+    <title>PreApprove Page | CSCM</title>
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
 <body>
     <header>
