--- a/Views/Home/Register.cshtml
+++ b/Views/Home/Register.cshtml
@@ -6,8 +6,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Registration Page</title>
-        <link rel="stylesheet" href="~/css/site.css"/>
+    <title>Registration Page | CSCM</title>
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     </head>
     <body>
         <div class="main-content">
