--- a/Views/Home/SubmitAClaim.cshtml
+++ b/Views/Home/SubmitAClaim.cshtml
@@ -7,8 +7,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Submit a claim Page</title>
-    <link rel="stylesheet" href="~/css/site.css" />
+    <title>Submit a claim Page | CSCM</title>
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
 <body>
     <header>
@@ -34,23 +34,23 @@
                 <form>
                     <div class="form-group">
                         <label for="faculty-name">Faculty Name</label>
-                        <input type="text" id="faculty-name">
+                        <input type="text" id="faculty-name" placeholder="Enter faculty name">
                     </div>
                     <div class="form-group">
                         <label for="module-name">Module Name</label>
-                        <input type="text" id="module-name">
+                        <input type="text" id="module-name" placeholder="Enter module name">
                     </div>
                     <div class="form-group">
                         <label for="hours-worked"> Number Of Hours Worked</label>
-                        <input type="number" id="hours-worked" >
+                        <input type="number" id="hours-worked" placeholder="Enter number of hours worked">
                     </div>
                     <div class="form-group">
                         <label for="rate">Rate: Amount Per Hour</label>
-                        <input type="number" id="rate" >
+                        <input type="number" id="rate" placeholder="Enter your rate of how much you earn per hour">
                     </div>
                     <div class="form-group">
                         <label for="total-amount">Total Amount</label>
-                        <input type="number" id="total-amount">
+                        <input type="number" id="total-amount" placeholder="Enter calculated total">
                     </div>
                     <div class="form-group">
                         <label for="upload-documents">Upload Supporting Document(s)</label>
