added comments in the views

--- a/Views/Home/ApproveClaim.cshtml
+++ b/Views/Home/ApproveClaim.cshtml
@@ -30,7 +30,7 @@
     <div class="content">
 
         <div id="track-claims" class="page">
-            <h2>Pre-Approve Claims</h2>
+            <h2>Approve Claims</h2>
             <table>
                 <thead>
                     <tr>
